Novas funcionalidades. Bug em cálculos detectado.

--- a/Sistemas/128x128.evolucaoSistema.config
+++ b/Sistemas/128x128.evolucaoSistema.config
@@ -1,11 +1,12 @@
 TIPO=EVOLUCAO_ATE_EQUILIBRIO
-LARGURA_REDE=200
-ALTURA_REDE=200
+LARGURA_REDE=128
+ALTURA_REDE=128
 INTERACAO_VIZINHOS=1
 CAMPO_EXTERNO=0
 CONSTANTE_BOLTZMAN=1
 TEMPERATURA=1
 PASSOS_MONTECARLO=5000
-IDENTIFICADOR=rede_200_200_2kelvin_sem_campo_externo
+IDENTIFICADOR=rede_128_128_0kelvin_sem_campo_externo_evolucao
 GERAR_GIF=1
 GERAR_GRAFICOS=1
+NUMERO_FRAMES_GIF=100
